<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Login">


    <EditText
        android:id="@+id/editPassword"
        android:layout_width="308dp"
        android:layout_height="53dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:textColorHint="#838282"
        android:hint="@string/password"
        android:autofillHints="no"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="391dp"
        android:layout_height="299dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/nth"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/city" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button3"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/button_design"
        android:text="@string/btn1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="117dp"
        android:layout_height="52dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="43dp"
        android:background="@drawable/button_design"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="309dp"
        android:layout_height="54dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/email"
        android:autofillHints="no"
        android:textColorHint="#838282"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/create_acc_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPassword" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/forgot_pwd_text"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="63dp"
        android:layout_height="38dp"
        android:layout_marginTop="48dp"
        android:contentDescription="@string/nth"
        app:layout_constraintEnd_toEndOf="@+id/editPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress"
        app:srcCompat="@drawable/passwordhide" />

</androidx.constraintlayout.widget.ConstraintLayout>