<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UpdateEmail">

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp">-->

        <!--<RelativeLayout
            android:id="@+id/email_relative"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:padding="2dp">-->

    <TextView
        android:id="@+id/email_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:text="@string/email_text"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_toolbar" />


    <!-- </RelativeLayout>-->

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_relative"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:padding="3dp">-->

    <TextView
        android:id="@+id/update_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="268dp"
        android:padding="6dp"
        android:text="@string/current_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_content" />

    <EditText
        android:id="@+id/current_email"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_email"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/edit_current_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="#838282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_email" />

    <TextView
        android:id="@+id/password_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_email"
        android:layout_marginStart="24dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="293dp"
        android:padding="6dp"
        android:text="@string/password"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_email" />

    <EditText
        android:id="@+id/current_password"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_text"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/edit_current_pwd"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="#838282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/authenticate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_password"
        android:layout_marginStart="104dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="89dp"
        android:background="@drawable/button_design"
        android:padding="5dp"
        android:text="@string/authenticate"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_password" />

    <!-- </RelativeLayout>
    </RelativeLayout>-->

    <TextView
        android:id="@+id/new_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="63dp"
        android:padding="6dp"
        android:text="@string/password_auth"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authenticate" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_email_text"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="287dp"
        android:padding="6dp"
        android:text="@string/new_email"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_email_text" />

    <EditText
        android:id="@+id/new_email"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_text"
        android:layout_marginStart="17dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/edit_new_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textAlignment="center"
        android:textColorHint="#838282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_email"
        android:layout_marginStart="106dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="87dp"
        android:background="@drawable/disabled_button"
        android:padding="1dp"
        android:text="@string/update_email"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_email" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/email_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#7195EF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>