<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Translator">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="133dp"
        android:background="@drawable/button_design"
        android:text="@string/translate_text"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#1A549A"
        app:icon="@drawable/translate_icon"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/targetButton"
        android:layout_width="146dp"
        android:layout_height="54dp"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_design"
        android:text="@string/destination_language"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#1A549A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sourceButton"
        android:layout_width="140dp"
        android:layout_height="54dp"
        android:layout_margin="10dp"
        android:layout_marginStart="19dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_design"
        android:text="@string/source_language"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:backgroundTint="#1A549A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destinationText" />

    <EditText
        android:id="@+id/sourceText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="6dp"
        android:autofillHints="no"
        android:background="@drawable/edit_text_design"
        android:ems="10"
        android:hint="@string/enter_text"
        android:inputType="text"
        android:padding="20dp"
        android:textColorHint="#838282"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/destinationText"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="18sp"
        android:layout_margin="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sourceText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_design"
        android:text="@string/back"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialButton" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="57dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="22dp"
        app:layout_constraintEnd_toStartOf="@+id/targetButton"
        app:layout_constraintStart_toEndOf="@+id/sourceButton"
        app:layout_constraintTop_toBottomOf="@+id/destinationText"
        app:srcCompat="@drawable/arrow_forward" />


</androidx.constraintlayout.widget.ConstraintLayout>